# coconut

./: .gitignore  README.md  justfile  mjc_research_journal.md  pyproject.toml
args/: gsm_coconut.yaml  gsm_coconut_eval.yaml  gsm_coconut_qwen.yaml  gsm_cot.yaml  gsm_cot_qwen.yaml  gsm_cot_qwenr1.yaml  gsm_qwen.yaml  gsm_qwen_1.5b.yaml  gsm_qwen_1.5b_H100.py  gsm_qwen_1.5b_H100.yaml
coconut/: coconut.py  dataset.py  eval.py  evaluate.py  trainer_optimi.py  utils.py
scripts/: eval_base_models.ipynb  omegaconfigs.py  run.py  scratch.ipynb  scratch2.py
scripts/preprocessing/: gsm_icot.bash  run.py
