[project]
name = "coconut"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==3.1.0",
    "einops>=0.8.0",
    "jaxtyping>=0.2.36",
    "loguru>=0.7.3",
    "numpy==2.1.3",
    "pandas>=2.2.3",
    "torch==2.5.1",
    "tqdm==4.67.0",
    "transformers==4.46.2",
    "wandb==0.18.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest>=8.0.2",
    "ruff>=0.8.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
